--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -1,5 +1,9 @@
 <h1>welcome to my page</h1>
 
-<%=link_to "create new your",'/clients/new' %><br>
+
 <%=link_to "show your active user",'/act/active' %><br>
-<%=link_to "show your inactive user",'/act/inactive' %>
+<%=link_to "show your inactive user",'/act/inactive' %><br>
+<%=link_to 'singup' ,'/clients/new' %><br>
+<%= link_to 'Login', 'login' %><br>
+
+
