--- a/app/views/clients/new.html.erb
+++ b/app/views/clients/new.html.erb
@@ -13,17 +13,18 @@
 
 
   <div>
-    <%= form.label :phone %><br>
-    <%= form.text_field :phone %>
+    <%= form.label :email %><br>
+    <%= form.text_field :email%>
   </div>
 
   
   <div>
-    <%= form.label :address %><br>
-    <%= form.text_area:address %>
+    <%= form.label :password %><br>
+    <%= form.text_area :password %>
   </div>
 
   <div>
     <%= form.submit %>
   </div>
 <% end %>
+<%=link_to "Back","/" %>
